--- a/css/styles.css
+++ b/css/styles.css
@@ -7,8 +7,13 @@ Background color: #252525
 body {
   font-family: "Raleway", sans-serif;
   margin: 0;
+  border: 0;
+  width: 100%;
+  height: 100%;
   /* text align needs to be put into the PARENT of elements we want to centre */
   text-align: center;
+  overflow-x: hidden;
+  width: 100%;
 }
 
 hr {
